--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/alurafood-pagamento?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=dharis55@
+spring.datasource.password=${YOUR_MYSQL_PASSWORD}
 spring.jpa.show-sql=true
 
 spring.application.name=pagamentos-ms
 eureka.client.serviceUrl.defaultZone=http://localhost:8081/eureka
+eureka.instance.instance-id=${spring.application.name}:${random.int}
 server.port=0
+
+resilience4j.circuitbreaker.instances.atualizaPedido.slidingWindowSize: 3
+resilience4j.circuitbreaker.instances.atualizaPedido.minimumNumberOfCalls: 2
+resilience4j.circuitbreaker.instances.atualizaPedido.waitDurationInOpenState: 50s
